fix default hostname for linux/mac